# appcenter

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: main.yml
src/: MainWindow.vala
src/Core/: BackendAggregator.vala  FlatpakBackend.vala  Package.vala  PackageKitBackend.vala  UbuntuDriversBackend.vala
src/Views/: AppListUpdateView.vala  InstalledView.vala
src/Widgets/: AbstractAppList.vala  PackageRow.vala
tests/: common_steps.py  environment.py  flatpak.feature  general.feature  meson.build  template.test.in  test-runner.sh
tests/steps/: flatpak.py  general.py  utils.py
